--- a/app/views/spree/customer/shared/side_menu/category/_inventory.html.erb
+++ b/app/views/spree/customer/shared/side_menu/category/_inventory.html.erb
@@ -1,18 +1,9 @@
 <h3>
   <%=image_tag("spree/manage/img/nav-ico4.png")%>
-  <!-- <img src="images/spree/manage/img/nav-ico4.png" alt=""> -->
-  <span class="tablet-hide">Invoices <i class="fa fa-angle-left"></i></span>
+  <span class="tablet-hide">Iventory <i class="fa fa-angle-left"></i></span>
 </h3>
 <div class="accordion-block">
   <ul>
-    <li><a href="">Etiam ullamcorper</a></li>
-    <li><a href="">Curabitur imperdiet</a></li>
-    <li><a href="">Nam laoreet</a></li>
-    <li><a href="">Aliquam</a></li>
-    <li><a href="">Duis vel lacus</a></li>
-    <li><a href="">Vestibulum sem</a></li>
-    <li><a href="">Phasellus</a></li>
-    <li><a href="">Cras feugiat</a></li>
-    <li><a href="">Curabitur</a></li>
+    <li><a href=""></a></li>
   </ul>
 </div>
