--- a/app/views/spree/customer/shared/side_menu/category/_my_account.html.erb
+++ b/app/views/spree/customer/shared/side_menu/category/_my_account.html.erb
@@ -1,7 +1,6 @@
-
-<a href="<%= manage_url %>">
-  <h3><%=image_tag("spree/manage/img/nav-ico1.png")%>
-    <span class="tablet-hide">Overview
+<a href="<%#= my_account_url %>">
+  <h3><%=image_tag("spree/manage/img/my_account.png")%>
+    <span class="tablet-hide">My Account
       <!-- <i class="fa fa-angle-left"></i> -->
     </span>
   </h3>
