--- a/app/views/spree/customer/shared/side_menu/category/_vendors.html.erb
+++ b/app/views/spree/customer/shared/side_menu/category/_vendors.html.erb
@@ -1,11 +1,12 @@
-<a href="<%= orders_url %>">
+<a href="<%= vendors_url %>">
   <h3>
-    <%=image_tag("spree/manage/img/nav-ico3.png")%>
-    <span class="tablet-hide">Orders
+    <%=image_tag("spree/manage/img/customers.png")%>
+    <span class="tablet-hide">Vendors
        <!-- <i class="fa fa-angle-left"></i> -->
      </span>
   </h3>
 </a>
+
 <div class="accordion-block">
   <ul>
     <li><a href=""></a></li>
