--- a/app/views/spree/manage/shared/side_menu/category/_customers.html.erb
+++ b/app/views/spree/manage/shared/side_menu/category/_customers.html.erb
@@ -1,7 +1,7 @@
 
-<a href="<%= manage_url %>">
-  <h3><%=image_tag("spree/manage/img/nav-ico1.png")%>
-    <span class="tablet-hide">Overview
+<a href="<%= manage_customers_url %>">
+  <h3><%=image_tag("spree/manage/img/customers.png")%>
+    <span class="tablet-hide">Customers
       <!-- <i class="fa fa-angle-left"></i> -->
     </span>
   </h3>
