--- a/app/views/spree/manage/shared/side_menu/category/_products.html.erb
+++ b/app/views/spree/manage/shared/side_menu/category/_products.html.erb
@@ -1,7 +1,12 @@
+<a href="<%= manage_products_url %>">
 <h3>
   <%=image_tag("spree/manage/img/nav-ico2.png")%>
-   <span class="tablet-hide">Invoices <i class="fa fa-angle-left"></i></span>
+   <span class="tablet-hide">Products
+     <!-- <i class="fa fa-angle-left"></i> -->
+   </span>
 </h3>
+</a>
+
 <div class="accordion-block">
   <ul>
     <li><a href=""></a></li>
