--- a/app/views/spree/manage/shared/_header.html.erb
+++ b/app/views/spree/manage/shared/_header.html.erb
@@ -9,7 +9,7 @@
         <input class="sb-search-submit" type="submit" value="">
       </form>
     </div>
-    <div class="exit-ico"><i class="fa fa-sign-out"></i></div>
+    <a href="<%= logout_url %>"><div class="exit-ico"><i class="fa fa-sign-out"></i></div></a>
     <div class="settings-ico"><i class="fa fa-cog"></i></div>
   </div>
 </header>
