--- a/app/views/spree/manage/shared/side_menu/category/_orders.html.erb
+++ b/app/views/spree/manage/shared/side_menu/category/_orders.html.erb
@@ -1,18 +1,15 @@
-<h3>
-  <%=image_tag("spree/manage/img/nav-ico3.png")%>
-  <!-- <img src="images/spree/manage/img/nav-ico3.png" alt="">  -->
-  <span class="tablet-hide">Orders <i class="fa fa-angle-left"></i></span>
-</h3>
+<!-- remove this link when using accordian-block -->
+<a href="<%= manage_orders_url %>">
+  <h3>
+    <%=image_tag("spree/manage/img/nav-ico3.png")%>
+    <span class="tablet-hide">Orders
+      <!-- <i class="fa fa-angle-left"></i> -->
+    </span>
+  </h3>
+</a>
+
 <div class="accordion-block">
   <ul>
-    <li><a href="">Etiam ullamcorper</a></li>
-    <li><a href="">Curabitur imperdiet</a></li>
-    <li><a href="">Nam laoreet</a></li>
-    <li><a href="">Aliquam</a></li>
-    <li><a href="">Duis vel lacus</a></li>
-    <li><a href="">Vestibulum sem</a></li>
-    <li><a href="">Phasellus</a></li>
-    <li><a href="">Cras feugiat</a></li>
-    <li><a href="">Curabitur</a></li>
+    <li><a href=""></a></li>
   </ul>
 </div>
