Fixing fonts linking for heroku

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -1,7 +1,7 @@
 /*-------------------------------------------------------------------------*/
 /*	1. Globally Applied Styles
 /*-------------------------------------------------------------------------*/
-@import url(fonts/stylesheet.css);
+@import url(<%= asset_path "fonts.css" %>);
 html{
 	height: 100%;
 }
