Move scripts for header and nav up and separate out charts scripts

--- a/app/views/spree/layouts/customer.html.erb
+++ b/app/views/spree/layouts/customer.html.erb
@@ -127,8 +127,7 @@
     	</script>
     	<!-- // -->
     	<!-- Scripts -->
-      <%= javascript_include_tag "spree/manage/js/scripts.js" %>
-    	<!-- <script src="assets/spree/manage/js/scripts.js"></script> -->
+      <%= javascript_include_tag "spree/scripts.js" %>
     	<!-- // -->
     <!-- </div> -->
 
