--- a/app/views/spree/layouts/manage.html.erb
+++ b/app/views/spree/layouts/manage.html.erb
@@ -105,7 +105,6 @@
     	</script>
     	<!-- // -->
       <!-- Popup -->
-      <!-- <script type='text/javascript' src='assets/spree/manage/js/jquery.simplemodal.js'></script> -->
       <%= javascript_include_tag "spree/manage/js/jquery.simplemodal.js" %>
       <script>
         jQuery(function ($) {
@@ -118,17 +117,16 @@
       </script>
       <!-- // -->
       <!-- Search field -->
-    	<!-- <script src="assets/spree/manage/js/classie.js"></script> -->
+
       <%= javascript_include_tag "spree/manage/js/classie.js" %>
-    	<!-- <script src="assets/spree/manage/js/uisearch.js"></script> -->
+
       <%= javascript_include_tag "spree/manage/js/uisearch.js" %>
     	<script>
     		new UISearch( document.getElementById( 'sb-search' ) );
     	</script>
     	<!-- // -->
     	<!-- Scripts -->
-      <%= javascript_include_tag "spree/manage/js/scripts.js" %>
-    	<!-- <script src="assets/spree/manage/js/scripts.js"></script> -->
+      <%= javascript_include_tag "spree/scripts.js" %>
     	<!-- // -->
     <!-- </div> -->
 
