remove text decoration on sidemenu links

--- a/app/assets/stylesheets/spree/manage/css/style.css
+++ b/app/assets/stylesheets/spree/manage/css/style.css
@@ -1010,6 +1010,10 @@ img{
 	overflow: hidden;
 	display: none;
 }
+
+#accordion a{
+	text-decoration: none;
+}
 .jq-selectbox, .jq-selectbox__select{
     max-width: 100%;
 }
