--- a/app/assets/stylesheets/spree/manage/css/style.css
+++ b/app/assets/stylesheets/spree/manage/css/style.css
@@ -1419,8 +1419,38 @@ img{
 /*	3.	Responsive
 /*-------------------------------------------------------------------------*/
 @media (max-width: 1599px) {
-	.app_ui-wrapper .app_ui-block .col1 .jq-selectbox__select {
+	.app_ui-wrapper .app_ui-block .jq-selectbox__select {
 	    width: auto;
+	}
+}
+@media (max-width: 1399px){
+	.order-product-list .tRow .cel:last-child {
+	    width: 80px;
+	}
+	.order-product-list .tRow .cel:first-child {
+	    width: 120px;
+	}
+	.order-product-list .tRow .cel .addToOrder-button {
+	    font-size: 12px;
+	    padding: 12px 5px 10px 5px;
+	}
+	#filter-form .jq-selectbox__select-text {
+	    min-width: 100px;
+	}
+	.order-product-list .tRow .cel {
+	    padding: 15px 5px;
+	    font-size: 14px;
+	}
+	.order-product-list .tRow.header .cel {
+	    font-size: 16px;
+	}
+	.search-area .recent-block .recent-list a#recent_orders {
+	    padding: 22px 10px 18px 10px;
+	    font-size: 16px;
+	}
+	.search-area .recent-block a.browse_catalog {
+	    padding: 22px 10px 19px 10px;
+	    font-size: 16px;
 	}
 }
 @media (min-width: 1200px) and (max-width: 1399px) {
@@ -1514,36 +1544,67 @@ img{
 	    width: 100%;
 	    margin-bottom: 20px;
 	}
+	#search-form input[type="text"] {
+	    width: 130px;
+	}
+	.search-block #search-form {
+	    margin-right: 15px;
+	}
+	.app_ui-wrapper .app_ui-block .search-block form label {
+	    margin-right: 10px;
+	    font-size: 12px;
+	}
+	#filter-form .jq-selectbox__select-text {
+	    min-width: 80px;
+	}
+	.search-area .recent-block .recent-list a#recent_orders {
+	    padding: 16px 10px 14px 10px;
+	    font-size: 14px;
+	}
+	.search-area .recent-block a.browse_catalog {
+	    padding: 16px 10px 14px 10px;
+	    font-size: 14px;
+	}
+	.app_ui-block .search-area .search-block {
+	    padding: 10px 0;
+	}
+	.search-area .recent-block .recent-list ul {
+	    top: 50px;
+	}
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+	.app_ui-wrapper .order-product-list .tRow .cel img{
+		width: 120px;
+	}
+	.app_ui-wrapper .app_ui-block.active .order-product-list .tRow .cel:first-child, .app_ui-wrapper .app_ui-block.active .order-product-list .tRow .cel img{
+	    width: 80px;
+	}
+	.app_ui-wrapper .app_ui-block.active .order-product-list .tRow.header .cel {
+	    font-size: 14px;
+	}
+	.app_ui-wrapper .app_ui-block.active .order-product-list .spin span {
+	    width: 30px;
+	    height: 30px;
+	    font-size: 14px;
+	}
+	.app_ui-wrapper .app_ui-block.active .order-product-list .spin input {
+	    width: 35px;
+	    height: 30px;
+	}
+	.app_ui-wrapper .app_ui-block.active .order-product-list .tRow .cel:last-child {
+	    width: 50px;
+	}
+	.app_ui-wrapper .app_ui-block.active .order-product-list .tRow .cel .addToOrder-button {
+	    font-size: 10px;
+	    padding: 12px 2px 10px 2px;
+	}
 }
 @media (min-width: 992px) {
 	.app_ui-wrapper .shadow {
 	    display: none !important;
 	}
-}
-@media (max-width: 991px) {
-	.app_ui-wrapper .app_ui-block form#invoice-form h3.title {
-	    margin: 0 0 25px 0;
-	    font-size: 23px;
-	}
-	#basic-modal-content {
-	    width: 700px;
-	    padding: 40px 40px 20px 40px;
-	}
-	.header .logo {
-	    width: 70px;
-	    height: 100%;
-	    background: #FF7E00 url("../img/logo2.png") no-repeat center center;
-	}
-	.app_ui-wrapper .header-nav {
-	    padding: 6px 20px 6px 85px;
-	}
-	.app_ui-wrapper .app_ui-block .col1 .jq-selectbox__select{
-		min-width: 0;
-	}
-}
-@media (min-width: 992px) {
 	.app_ui-wrapper .app_ui-block {
-	    padding: 20px 20px 50px 100px;
+	    padding: 20px 20px 50px 90px;
 	}
 	.app_ui-wrapper .app_ui-block.active {
 	    padding: 20px 20px 50px 250px;
@@ -1593,13 +1654,153 @@ img{
 	.app_ui-wrapper aside h3 {
 	    padding: 14px 18px 13px 18px;
 	}
+	.mobile-divider{
+		display: none;
+	}
+}
+@media (max-width: 991px) {
+	.app_ui-wrapper .app_ui-block form#invoice-form h3.title {
+	    margin: 0 0 25px 0;
+	    font-size: 23px;
+	}
+	#basic-modal-content {
+	    width: 700px;
+	    padding: 40px 40px 20px 40px;
+	}
+	.app_ui-wrapper header .logo {
+	    width: 70px;
+	    height: 100%;
+	    background: #FF7E00 url("../img/logo2.png") no-repeat center center;
+	}
+	.app_ui-wrapper .header-nav {
+	    padding: 6px 20px 6px 85px;
+	}
+	.app_ui-wrapper .app_ui-block .jq-selectbox__select{
+		min-width: 0;
+	}
+	.app_ui-block .search-area {
+	    text-align: center;
+	    margin: -14px 0px 20px 0px;
+	    padding: 0 20px 5px 20px;
+	}
+	.app_ui-block .search-area .search-block, .app_ui-block .search-area .recent-block{
+	    float: none;
+	}
+	.search-area .recent-block .recent-list a#recent_orders {
+	    padding: 16px 10px 13px 10px;
+	    margin-right: 20px;
+	    border: 1px solid #E0D9D2;
+	}
+
+
+	#order-form{
+		max-width: 620px;
+   		margin: 0 auto;
+	}
+	.order-product-list, .order-product-list .tRow, .order-product-list .tRow .cel{
+		display: block;
+	}
+	.order-product-list .tRow.header {
+	    display: none;
+	}
+	.order-product-list .tRow:after{
+		content: "";
+		clear: both;
+		display: block;
+	}
+	.order-product-list .tRow .cel:first-child {
+	    width: 33%;
+	    padding: 0;
+	    text-align: left;
+	    float: left;
+	}
+	.order-product-list .tRow .cel:nth-child(2), .order-product-list .tRow .cel:nth-child(3){
+		width: 33%;
+	    float: left;
+	    -webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+	    padding: 6% 5px 5px 5px;
+	}
+	.order-product-list .tRow .cel:nth-child(5){
+		display: none;
+	}
+	.order-product-list .tRow .cel:nth-child(4), .order-product-list .tRow .cel:nth-child(6){
+		width: 33%;
+	    float: left;
+	    -webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+	    padding: 5px;
+	}
+	.order-product-list .tRow .cel:nth-child(8) {
+	    width: 33%;
+	    padding: 15px 0;
+	    float: right;
+	    -webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+	}
+	.order-product-list .tRow .cel:last-child {
+	    width: 33%;
+	    padding: 15px 0;
+	    float: left;
+	    -webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+	}
+	.order-product-list .tRow .cel img {
+	    margin: 0 auto;
+	}
+	.order-product-list .tRow .cel:nth-child(3):after, .order-product-list .tRow .cel:nth-child(4):after, .order-product-list .tRow .cel:nth-child(5):after {
+	    display: none;
+	}
+	.order-product-list .tRow .cel .addToOrder-button {
+	    font-size: 16px;
+	    display: block;
+	    padding: 22px 5px 18px 5px;
+	}
+	.order-product-list .qty-block {
+	    padding: 9px;
+	    width: 100%;
+	    float: right;
+	    -webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+	}
+	.order-product-list .tRow {
+	    margin-bottom: 10px;
+	    padding: 10px 0;
+	}
+	.app_ui-block .search-area .search-block {
+	    padding: 5px 0;
+	}
+	.tablet-center{
+		text-align: center;
+	}
+	.app_ui-wrapper .app_ui-block h1.tablet-center{
+		font-size: 30px;
+    	line-height: 30px;
+	}
+	.order-product-list .tRow .cel {
+	    font-size: 18px;
+	}
+	.order-product-list .tRow .cel:nth-child(2):after {
+	    margin-top: 0;
+	}
+	.mobile-divider{
+		display: block;
+		clear: none;
+		width: 100%;
+		float: left;
+	}
 }
 @media (min-width: 768px) and (max-width: 991px) {
 	.app_ui-wrapper .app_ui-block.active {
-	    padding: 20px 20px 50px 100px;
+	    padding: 20px 20px 50px 90px;
 	}
-	.app_ui-wrapper .app_ui-block{
-	    padding: 20px 20px 50px 310px;
+	.app_ui-wrapper .app_ui-block {
+	    padding: 20px 20px 50px 300px;
 	}
 	aside.active .tablet-hide, aside.active .app-user-block .info.tablet-hide{
 		width: 0;
@@ -1642,6 +1843,9 @@ img{
 	}
 	.app_ui-wrapper aside h3 i {
 	    margin-right: 10px;
+	}
+	.order-product-list .spin span {
+	    width: 30px;
 	}
 
 }
@@ -1798,7 +2002,7 @@ img{
 	    line-height: 30px;
 	    padding: 10px;
 	}
-	.header:after {
+	.app_ui-wrapper header:after {
 	    content: "";
 	    display: block;
 	    clear: both;
@@ -1824,12 +2028,18 @@ img{
 	.app-dash-widget .jq-selectbox{
 		width: 100% !important;
 	}
-	.header .sb-search {
+	.app_ui-wrapper header .sb-search {
 	    position: absolute;
 	    top: 6px;
 	}
 	.sb-icon-search, .sb-search-submit {
 	    width: 30px;
+	}
+	.order-product-list .tRow .cel:nth-child(2):after {
+	    top: 17px;
+	}
+	.order-product-list .tRow .cel:nth-child(8) {
+	    width: 50%;
 	}
 }
 @media (max-width: 479px) {
@@ -1928,5 +2138,60 @@ img{
 	}
 	.app_ui-wrapper .app_ui-block .average-price {
 	    padding: 18px 0;
+	}
+	.order-product-list .spin span {
+	    width: 30px;
+	}
+	.order-product-list .tRow .cel {
+	    font-size: 14px;
+	}
+	.search-area .recent-block .recent-list a#recent_orders {
+	    font-size: 12px;
+	    padding: 11px 10px 10px 10px;
+	}
+	.search-area .recent-block a.browse_catalog {
+	    font-size: 12px;
+	    padding: 12px 10px 11px 10px;
+	}
+	.app_ui-block .search-area {
+	    padding: 0 0px 5px 0px;
+	}
+	#search-form input[type="text"] {
+	    width: 110px;
+	    font-size: 12px;
+	}
+	.app_ui-wrapper .app_ui-block .search-block form label {
+	   display: none;
+	}
+	.order-product-list .tRow .cel:first-child {
+	    width: 100%;
+	    text-align: center;
+	    float: none;
+	    margin-bottom: 20px;
+	}
+	.order-product-list .tRow .cel:nth-child(2), .order-product-list .tRow .cel:nth-child(3), .order-product-list .tRow .cel:nth-child(4), .order-product-list .tRow .cel:nth-child(6){
+	    padding: 5px;
+	    width: 50%;
+	}
+	.order-product-list .tRow .cel:nth-child(2):after {
+	    top: 0;
+	    height: 48px;
+	}
+	.order-product-list .tRow .cel:last-child, .order-product-list .tRow .cel:nth-child(8){
+	    width: 50%;
+	    padding: 15px 5px;
+	}
+	.order-product-list .tRow .cel .addToOrder-button {
+	    font-size: 13px;
+	    padding: 20px 5px 17px 5px;
+	}
+	.order-product-list .qty-block {
+	    padding: 9px 0;
+	}
+}
+ @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  /* IE10+ specific styles go here */
+  .order-product-list .tRow .cel:nth-child(2):after, .order-product-list .tRow .cel:nth-child(3):after, .order-product-list .tRow .cel:nth-child(4):after, .order-product-list .tRow .cel:nth-child(5):after {
+	    margin-top: 20px;
 	}
 }
