--- a/app/views/spree/customer/shared/_header.html.erb
+++ b/app/views/spree/customer/shared/_header.html.erb
@@ -9,7 +9,9 @@
         <input class="sb-search-submit" type="submit" value="">
       </form>
     </div>
-    <a href="<%= logout_url %>"><div class="exit-ico"><i class="fa fa-sign-out"></i></div></a>
+    <div class="exit-ico">
+			 <%= link_to "", spree.logout_path, class: "icon fa fa-sign-out" %>
+		</div>
     <div class="settings-ico"><i class="fa fa-cog"></i></div>
   </div>
 </header>
