--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -1353,7 +1353,8 @@ img{
     font-family: 'p22_underground_cy_prodemi';
     color: #FFF;
     background: #FF7E00;
-    padding: 22px 0px 18px 0px;
+    padding: 22px 10px 18px 10px;
+		margin: auto;
     font-size: 16px;
     text-decoration: none;
     font-weight: bold;
