--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -1336,7 +1336,8 @@ img{
     color: #6e665f;
     position: relative;
 }
-.order-product-list .tRow .cel:nth-child(2):after, .order-product-list .tRow .cel:nth-child(3):after, .order-product-list .tRow .cel:nth-child(4):after, .order-product-list .tRow .cel:nth-child(5):after{
+.order-product-list .tRow .cel:nth-child(4):after, .order-product-list .tRow .cel:nth-child(5):after,
+.order-product-list .tRow .cel:nth-child(6):after, .order-product-list .tRow .cel:nth-child(7):after{
     content: "";
     position: absolute;
     width: 1px;
