Fix responsive table format.

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -20,6 +20,9 @@ body{
 	margin: 0;
 	padding: 0;
 }
+button {
+	border: none;
+}
 img{
 	max-width: 100%;
 	height: auto;
@@ -1336,8 +1339,7 @@ img{
     color: #6e665f;
     position: relative;
 }
-.order-product-list .tRow .cel:nth-child(4):after, .order-product-list .tRow .cel:nth-child(5):after,
-.order-product-list .tRow .cel:nth-child(6):after, .order-product-list .tRow .cel:nth-child(7):after{
+.order-product-list .tRow .cel:nth-child(4):after, .order-product-list .tRow .cel:nth-child(5):after, .order-product-list .tRow .cel:nth-child(6):after, .order-product-list .tRow .cel:nth-child(7):after{
     content: "";
     position: absolute;
     width: 1px;
@@ -1354,8 +1356,7 @@ img{
     font-family: 'p22_underground_cy_prodemi';
     color: #FFF;
     background: #FF7E00;
-    padding: 22px 10px 18px 10px;
-		margin: auto;
+    padding: 22px 0px 18px 0px;
     font-size: 16px;
     text-decoration: none;
     font-weight: bold;
@@ -1725,7 +1726,7 @@ img{
 	    text-align: left;
 	    float: left;
 	}
-	.order-product-list .tRow .cel:nth-child(2), .order-product-list .tRow .cel:nth-child(3){
+	.order-product-list .tRow .cel:nth-child(4), .order-product-list .tRow .cel:nth-child(5){
 		width: 33%;
 	    float: left;
 	    -webkit-box-sizing: border-box;
@@ -1733,10 +1734,10 @@ img{
 		box-sizing: border-box;
 	    padding: 6% 5px 5px 5px;
 	}
-	.order-product-list .tRow .cel:nth-child(5){
+	.order-product-list .tRow .cel:nth-child(7){
 		display: none;
 	}
-	.order-product-list .tRow .cel:nth-child(4), .order-product-list .tRow .cel:nth-child(6){
+	.order-product-list .tRow .cel:nth-child(6), .order-product-list .tRow .cel:nth-child(8){
 		width: 33%;
 	    float: left;
 	    -webkit-box-sizing: border-box;
@@ -1744,7 +1745,7 @@ img{
 		box-sizing: border-box;
 	    padding: 5px;
 	}
-	.order-product-list .tRow .cel:nth-child(8) {
+	.order-product-list .tRow .cel:nth-child(10) {
 	    width: 33%;
 	    padding: 15px 0;
 	    float: right;
@@ -1763,7 +1764,7 @@ img{
 	.order-product-list .tRow .cel img {
 	    margin: 0 auto;
 	}
-	.order-product-list .tRow .cel:nth-child(3):after, .order-product-list .tRow .cel:nth-child(4):after, .order-product-list .tRow .cel:nth-child(5):after {
+	.order-product-list .tRow .cel:nth-child(5):after, .order-product-list .tRow .cel:nth-child(6):after, .order-product-list .tRow .cel:nth-child(7):after {
 	    display: none;
 	}
 	.order-product-list .tRow .cel .addToOrder-button {
@@ -1796,7 +1797,7 @@ img{
 	.order-product-list .tRow .cel {
 	    font-size: 18px;
 	}
-	.order-product-list .tRow .cel:nth-child(2):after {
+	.order-product-list .tRow .cel:nth-child(4):after {
 	    margin-top: 0;
 	}
 	.mobile-divider{
@@ -2046,10 +2047,10 @@ img{
 	.sb-icon-search, .sb-search-submit {
 	    width: 30px;
 	}
-	.order-product-list .tRow .cel:nth-child(2):after {
+	.order-product-list .tRow .cel:nth-child(4):after {
 	    top: 17px;
 	}
-	.order-product-list .tRow .cel:nth-child(8) {
+	.order-product-list .tRow .cel:nth-child(10) {
 	    width: 50%;
 	}
 }
@@ -2180,15 +2181,15 @@ img{
 	    float: none;
 	    margin-bottom: 20px;
 	}
-	.order-product-list .tRow .cel:nth-child(2), .order-product-list .tRow .cel:nth-child(3), .order-product-list .tRow .cel:nth-child(4), .order-product-list .tRow .cel:nth-child(6){
+	.order-product-list .tRow .cel:nth-child(4), .order-product-list .tRow .cel:nth-child(5), .order-product-list .tRow .cel:nth-child(6), .order-product-list .tRow .cel:nth-child(8){
 	    padding: 5px;
 	    width: 50%;
 	}
-	.order-product-list .tRow .cel:nth-child(2):after {
+	.order-product-list .tRow .cel:nth-child(4):after {
 	    top: 0;
 	    height: 48px;
 	}
-	.order-product-list .tRow .cel:last-child, .order-product-list .tRow .cel:nth-child(8){
+	.order-product-list .tRow .cel:last-child, .order-product-list .tRow .cel:nth-child(10){
 	    width: 50%;
 	    padding: 15px 5px;
 	}
@@ -2202,7 +2203,7 @@ img{
 }
  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   /* IE10+ specific styles go here */
-  .order-product-list .tRow .cel:nth-child(2):after, .order-product-list .tRow .cel:nth-child(3):after, .order-product-list .tRow .cel:nth-child(4):after, .order-product-list .tRow .cel:nth-child(5):after {
+  .order-product-list .tRow .cel:nth-child(4):after, .order-product-list .tRow .cel:nth-child(5):after, .order-product-list .tRow .cel:nth-child(6):after, .order-product-list .tRow .cel:nth-child(7):after {
 	    margin-top: 20px;
 	}
 }
