--- a/app/views/spree/manage/orders/edit.html.erb
+++ b/app/views/spree/manage/orders/edit.html.erb
@@ -8,8 +8,9 @@
 
 <div data-hook="outside_cart_form">
 	<%= form_for @order, url: spree.update_cart_path, html: { id: 'update-cart' } do |order_form| %>
+		<%= order_form.label :delivery_date %>
+	  <%= order_form.date_field :delivery_date, placeholder: "Delivery Date" %>
 		<div data-hook="inside_cart_form">
-
 			<div data-hook="cart_items" class="table-responsive">
 
 				<table class="single-order">
